update plan movement
